force-app/main/default/objects/Parker_Pen__c/fields/Event_Notification_1__c.field-meta.xml
<CustomField>
    <fullName>Event_Notification_1__c</fullName>
    <label>Event Notification 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_Notification_Global_Set</valueSetName>
    </valueSet>
</CustomField>