force-app/main/default/objects/Parker_Pen__c/fields/Git_Example_2__c.field-meta.xml
<CustomField>
    <fullName>Git_Example_2__c</fullName>
    <label>Git Example 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>