force-app/main/default/objects/Parker_Pen__c/fields/Git_example__c.field-meta.xml
<CustomField>
    <fullName>Git_example__c</fullName>
    <label>Git example</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_Notification_Global_Set</valueSetName>
    </valueSet>
</CustomField>